--- a/Grid by Example.html
+++ b/Grid by Example.html
@@ -10,9 +10,10 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 </head>
 <body>
+    <!--Header-->
     <div class="container-fuid">
         <div class="d-flex justify-content-end">
-            <a href="#"><i class="i bi bi-twitter"></i>Follow @rachelandrew</a>
+            <a href="#" class="ff rounded-pill bg-primary pe-3 py-1 mt-3 me-4 text-white text-decoration-none"><i class="i bi bi-twitter ps-3 pe-2"></i>Follow @rachelandrew</a>
         </div>
     </div>
 
