--- a/Grid by Example.html
+++ b/Grid by Example.html
@@ -11,10 +11,11 @@
 </head>
 <body>
     <!--Header-->
-    <div class="container-fuid">
+    <div class="container-fuid bg-grid">
         <div class="d-flex justify-content-end">
-            <a href="#" class="ff rounded-pill bg-primary pe-3 py-1 mt-3 me-4 text-white text-decoration-none"><i class="i bi bi-twitter ps-3 pe-2"></i>Follow @rachelandrew</a>
+            <a href="#" class="ff rounded-pill pe-3 pb-2 mt-3 me-4 text-white text-decoration-none"><i class="i bi bi-twitter ps-3 pe-1 fs-6"></i>Follow @rachelandrew</a>
         </div>
+        <div class="d-flex "
     </div>
 
 
