--- a/Grid by Example.html
+++ b/Grid by Example.html
@@ -15,7 +15,10 @@
         <div class="d-flex justify-content-end">
             <a href="#" class="ff rounded-pill pe-3 pb-2 mt-3 me-4 text-white text-decoration-none"><i class="i bi bi-twitter ps-3 pe-1 fs-6"></i>Follow @rachelandrew</a>
         </div>
-        <div class="d-flex "
+        <div>
+            <a href="#" class="text-decoration-none"><h1 class="grid text-white fw-bolder mt-5 pt-4">Grid by Example</h1></a>
+            <p class="grid text-white pt-3 pb-4">Everything you need to learn CSS Grid Layout</p>
+        </div>
     </div>
 
 
