added nav links

--- a/Grid by Example.html
+++ b/Grid by Example.html
@@ -19,6 +19,13 @@
             <a href="#" class="text-decoration-none"><h1 class="grid text-white fw-bolder mt-5 pt-4">Grid by Example</h1></a>
             <p class="grid text-white pt-3 pb-4">Everything you need to learn CSS Grid Layout</p>
         </div>
+        <div class="d-flex collapse navbar-collapse justify-content-evenly">
+            <a class="nav-link fs-5" href="#">Start Here</a>
+            <a class="nav-link fs-5" href="#">Examples</a>
+            <a class="nav-link fs-5" href="#">Patterns</a>
+            <a class="nav-link fs-5" href="#">Video tutorial</a>
+            <a class="nav-link fs-5" href="#">Resources</a>
+        </div>
     </div>
 
 
