--- a/Grid by Example.html
+++ b/Grid by Example.html
@@ -13,18 +13,18 @@
     <!--Header-->
     <div class="container-fuid bg-grid">
         <div class="d-flex justify-content-end">
-            <a href="#" class="ff rounded-pill pe-3 pb-2 mt-3 me-4 text-white text-decoration-none"><i class="i bi bi-twitter ps-3 pe-1 fs-6"></i>Follow @rachelandrew</a>
+            <a href="#" class="ff rounded-pill pe-3 pb-1 mt-3 me-4 text-white text-decoration-none"><i class="i bi bi-twitter ps-3 pe-1 fs-6"></i>Follow @rachelandrew</a>
         </div>
         <div>
             <a href="#" class="text-decoration-none"><h1 class="grid text-white fw-bolder mt-5 pt-4">Grid by Example</h1></a>
-            <p class="grid text-white pt-3 pb-4">Everything you need to learn CSS Grid Layout</p>
+            <p class="grid text-white pt-3 pb-3">Everything you need to learn CSS Grid Layout</p>
         </div>
-        <div class="d-flex collapse navbar-collapse justify-content-evenly">
-            <a class="nav-link fs-5" href="#">Start Here</a>
-            <a class="nav-link fs-5" href="#">Examples</a>
-            <a class="nav-link fs-5" href="#">Patterns</a>
-            <a class="nav-link fs-5" href="#">Video tutorial</a>
-            <a class="nav-link fs-5" href="#">Resources</a>
+        <div class="bg-nav d-flex justify-content-around border-bottom border-black">
+            <a class="nav-link fw-bold py-2 px-4" href="#">Start Here</a>
+            <a class="nav-link fw-bold py-2 px-4" href="#">Examples</a>
+            <a class="nav-link fw-bold py-2 px-4" href="#">Patterns</a>
+            <a class="nav-link fw-bold py-2 px-4" href="#">Video tutorial</a>
+            <a class="nav-link fw-bold py-2 px-4" href="#">Resources</a>
         </div>
     </div>
 
