--- a/Grid by Example.html
+++ b/Grid by Example.html
@@ -27,6 +27,22 @@
             <a class="nav-link fw-bold py-2 px-4" href="#">Resources</a>
         </div>
     </div>
+    <!--Main-->
+    <div class="main container-fuid">
+        <div class="row">
+            <div class="bg-grid col-8 mt-4 me-4 p-3">
+                <h1 class="text-white">CSS Grid Layout</h1>
+                <p class="text-white pe-5 mb-5">This site is a collection of examples, video and other information to help you 
+                                      learn CSS Grid Layout. Developed and maintained by <a class="text-white" href="#">Rachel Andrew.</a></p>
+            </div>
+            <div class="bg-grid2 col-4">
+                <a href="#">
+                <h1>The Video Tutorial</h1>
+                <p>A collection of short and to the point videos, demonstrating various parts of the CSS Grid Layout specification.</p>
+                </a>
+            </div>
+        </div>
+    </div>
 
 
     <!--<div class="panel-box panel-b flag-new"><a href="/examples">
