--- a/Grid by Example.html
+++ b/Grid by Example.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Grid by Example</title>
     <link href="Grid.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,700,400italic" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 </head>
@@ -30,14 +31,14 @@
     <!--Main-->
     <div class="main container-fuid">
         <div class="row">
-            <div class="bg-grid col-8 mt-4 me-4 p-3">
-                <h1 class="text-white">CSS Grid Layout</h1>
-                <p class="text-white pe-5 mb-5">This site is a collection of examples, video and other information to help you 
+            <div class="bg-grid col-8 mt-4 me-4 p-3 rounded">
+                <h1 class="text-white fw-bolder">CSS Grid Layout</h1>
+                <p class="text-white mb-5">This site is a collection of examples, video and other information to help you 
                                       learn CSS Grid Layout. Developed and maintained by <a class="text-white" href="#">Rachel Andrew.</a></p>
             </div>
-            <div class="bg-grid2 col-4">
-                <a href="#">
-                <h1>The Video Tutorial</h1>
+            <div class="bg-grid2 col-3 mt-4 p-3 border border-black rounded">
+                <a class="text-decoration-none text-black" href="#">
+                <h1 class="fs-2 fw-bolder">The Video Tutorial</h1>
                 <p>A collection of short and to the point videos, demonstrating various parts of the CSS Grid Layout specification.</p>
                 </a>
             </div>
