--- a/Grid by Example.html
+++ b/Grid by Example.html
@@ -30,17 +30,30 @@
     </div>
     <!--Main-->
     <div class="main container-fuid">
-        <div class="row">
-            <div class="bg-grid col-8 mt-4 me-4 p-3 rounded">
+        <div class="row mt-4">
+            <div class="bg-grid col-8 me-3 p-3 rounded">
                 <h1 class="text-white fw-bolder">CSS Grid Layout</h1>
                 <p class="text-white mb-5">This site is a collection of examples, video and other information to help you 
                                       learn CSS Grid Layout. Developed and maintained by <a class="text-white" href="#">Rachel Andrew.</a></p>
             </div>
-            <div class="bg-grid2 col-3 mt-4 p-3 border border-black rounded">
+            <div class="bg-grid2 col-3 ms-3 p-3 border border-black rounded">
                 <a class="text-decoration-none text-black" href="#">
-                <h1 class="fs-2 fw-bolder">The Video Tutorial</h1>
-                <p>A collection of short and to the point videos, demonstrating various parts of the CSS Grid Layout specification.</p>
+                <h1 class="fs-3 fw-bolder">The Video Tutorial</h1>
+                <p class="pe-5">A collection of short and to the point videos, demonstrating various parts of the CSS Grid Layout specification.</p>
                 </a>
+            </div>
+        </div>
+        <div class="row mt-4">
+            <div class="bg-violet col p-3">
+                <a class="text-decoration-none text-white" href="#">
+                <h1 class="fs-2 fw-bolder">Get Started Guide</h1>
+                <p class="mb-4">A structured guide to resources that will help you to start learning CSS Grid Layout.</p>
+                </a>
+            </div>
+        </div>
+        <div class="row mt-4">
+            <div class="bg-grid2 col-4 me-3 p-3 border border-black rounded">
+
             </div>
         </div>
     </div>
