--- a/Grid by Example.html
+++ b/Grid by Example.html
@@ -30,7 +30,7 @@
     </div>
     <!--Main-->
     <div class="main container-fuid">
-        <div class="row mt-4">
+        <div class="row my-4">
             <div class="bg-grid col-8 me-3 p-3 rounded">
                 <h1 class="text-white fw-bolder">CSS Grid Layout</h1>
                 <p class="text-white mb-5">This site is a collection of examples, video and other information to help you 
@@ -43,7 +43,7 @@
                 </a>
             </div>
         </div>
-        <div class="row mt-4">
+        <div class="row my-4">
             <div class="bg-violet col p-3">
                 <a class="text-decoration-none text-white" href="#">
                 <h1 class="fs-2 fw-bolder">Get Started Guide</h1>
@@ -51,9 +51,18 @@
                 </a>
             </div>
         </div>
-        <div class="row mt-4">
-            <div class="bg-grid2 col-4 me-3 p-3 border border-black rounded">
-
+        <div class="row my-4">
+            <div class="bg-grid2 col-5 me-3 p-3 border border-black rounded">
+                <a class="text-decoration-none text-black" href="#">
+                <h1 class="fs-3 fw-bolder">The Examples</h1>
+                <p class="">Small examples of the CSS Grid Layout specification. Each demonstrates a feature of the specification. Includes new Subgrid examples!</p>
+                </a>
+            </div>
+            <div class="bg-grid2 col-6 ms-3 p-3 border border-black rounded">
+                <a class="text-decoration-none text-black" href="#">
+                <h1 class="fs-3 fw-bolder">Patterns</h1>
+                <p class="">Grab & Go. A set of example patterns with fallbacks for older browsers.</p>
+                </a>
             </div>
         </div>
     </div>
