--- a/Grid by Example.html
+++ b/Grid by Example.html
@@ -52,7 +52,7 @@
             </div>
         </div>
         <div class="row my-4">
-            <div class="bg-grid2 col-5 me-3 p-3 border border-black rounded">
+            <div class="bg-grid2 col-5 me-3 p-3 border border-black rounded panel-box flag-new">
                 <a class="text-decoration-none text-black" href="#">
                 <h1 class="fs-3 fw-bolder">The Examples</h1>
                 <p class="">Small examples of the CSS Grid Layout specification. Each demonstrates a feature of the specification. Includes new Subgrid examples!</p>
@@ -64,13 +64,21 @@
                 <p class="">Grab & Go. A set of example patterns with fallbacks for older browsers.</p>
                 </a>
             </div>
+        </div> 
+        <div class="row my-4">
+            <div class="bg-grid2 col-8 me-3 p-3 border border-black rounded">
+                <a class="text-decoration-none text-black" href="#">
+                <h1 class="fs-3 fw-bolder">Resources</h1>
+                <p>More links to articles, tutorials and conference presentations that will help you learn CSS Grid Layout.</p>
+                </a>
+            </div>
+            <div class="bg-grid2 col-3 ms-3 p-3 border border-black rounded">
+                <a class="text-decoration-none text-black" href="#">
+                <h1 class="fs-3 fw-bolder">CSS Layout News</h1>
+                <p class="">Sign up for a weekly email full of CSS Layout links and resources.</p>
+                </a>
+            </div>
         </div>
     </div>
-
-
-    <!--<div class="panel-box panel-b flag-new"><a href="/examples">
-        <h2>The Examples</h2>
-        <p>Small examples of the CSS Grid Layout specification. Each demonstrates a feature of the specification. Includes new Subgrid examples!</p>
-      </a></div>-->
 </body>
 </html>
