--- a/Grid by Example.html
+++ b/Grid by Example.html
@@ -36,7 +36,7 @@
                 <p class="text-white mb-5">This site is a collection of examples, video and other information to help you 
                                       learn CSS Grid Layout. Developed and maintained by <a class="text-white" href="#">Rachel Andrew.</a></p>
             </div>
-            <div class="bg-grid2 col-3 ms-3 p-3 border border-black rounded">
+            <div class="bg-grid2 col-3 w ms-3 p-3 border border-black rounded">
                 <a class="text-decoration-none text-black" href="#">
                 <h1 class="fs-3 fw-bolder">The Video Tutorial</h1>
                 <p class="pe-5">A collection of short and to the point videos, demonstrating various parts of the CSS Grid Layout specification.</p>
@@ -72,10 +72,30 @@
                 <p>More links to articles, tutorials and conference presentations that will help you learn CSS Grid Layout.</p>
                 </a>
             </div>
-            <div class="bg-grid2 col-3 ms-3 p-3 border border-black rounded">
+            <div class="bg-grid2 col-3 w ms-3 p-3 border border-black rounded">
                 <a class="text-decoration-none text-black" href="#">
                 <h1 class="fs-3 fw-bolder">CSS Layout News</h1>
                 <p class="">Sign up for a weekly email full of CSS Layout links and resources.</p>
+                </a>
+            </div>
+        </div>
+        <div class="row my-4">
+            <div class="bg-grid2 col-5 me-3 p-3 border border-black rounded">
+                <a class="text-decoration-none text-black" href="#">
+                <h1 class="fs-3 fw-bolder">Questions?</h1>
+                <p class="">Ask me anything about Grid Layout over at my GitHub Grid AMA.</p>
+                </a>
+            </div>
+            <div class="bg-grid2 col-3 ww ms-3 me-3 p-3 border border-black rounded">
+                <a class="text-decoration-none text-black" href="#">
+                <h1 class="fs-3 fw-bolder">About CSS Grid</h1>
+                <p class="">What even is this? Do I need to care?</p>
+                </a>
+            </div>
+            <div class="bg-grid2 col-3 w ms-3 p-3 border border-black rounded">
+                <a class="text-decoration-none text-black" href="#">
+                <h1 class="fs-3 fw-bolder">News</h1>
+                <p class="">Infrequent updates on this site.</p>
                 </a>
             </div>
         </div>
