--- a/Grid by Example.html
+++ b/Grid by Example.html
@@ -55,13 +55,13 @@
             <div class="bg-grid2 col-5 me-3 p-3 border border-black rounded panel-box flag-new">
                 <a class="text-decoration-none text-black" href="#">
                 <h1 class="fs-3 fw-bolder">The Examples</h1>
-                <p class="">Small examples of the CSS Grid Layout specification. Each demonstrates a feature of the specification. Includes new Subgrid examples!</p>
+                <p class="mb-4">Small examples of the CSS Grid Layout specification. Each demonstrates a feature of the specification. Includes new Subgrid examples!</p>
                 </a>
             </div>
             <div class="bg-grid2 col-6 ms-3 p-3 border border-black rounded">
                 <a class="text-decoration-none text-black" href="#">
                 <h1 class="fs-3 fw-bolder">Patterns</h1>
-                <p class="">Grab & Go. A set of example patterns with fallbacks for older browsers.</p>
+                <p class="mb-4">Grab & Go. A set of example patterns with fallbacks for older browsers.</p>
                 </a>
             </div>
         </div> 
@@ -69,13 +69,13 @@
             <div class="bg-grid2 col-8 me-3 p-3 border border-black rounded">
                 <a class="text-decoration-none text-black" href="#">
                 <h1 class="fs-3 fw-bolder">Resources</h1>
-                <p>More links to articles, tutorials and conference presentations that will help you learn CSS Grid Layout.</p>
+                <p class="mb-4">More links to articles, tutorials and conference presentations that will help you learn CSS Grid Layout.</p>
                 </a>
             </div>
             <div class="bg-grid2 col-3 w ms-3 p-3 border border-black rounded">
                 <a class="text-decoration-none text-black" href="#">
                 <h1 class="fs-3 fw-bolder">CSS Layout News</h1>
-                <p class="">Sign up for a weekly email full of CSS Layout links and resources.</p>
+                <p class="mb-4">Sign up for a weekly email full of CSS Layout links and resources.</p>
                 </a>
             </div>
         </div>
@@ -83,19 +83,27 @@
             <div class="bg-grid2 col-5 me-3 p-3 border border-black rounded">
                 <a class="text-decoration-none text-black" href="#">
                 <h1 class="fs-3 fw-bolder">Questions?</h1>
-                <p class="">Ask me anything about Grid Layout over at my GitHub Grid AMA.</p>
+                <p class="mb-4">Ask me anything about Grid Layout over at my GitHub Grid AMA.</p>
                 </a>
             </div>
             <div class="bg-grid2 col-3 ww ms-3 me-3 p-3 border border-black rounded">
                 <a class="text-decoration-none text-black" href="#">
                 <h1 class="fs-3 fw-bolder">About CSS Grid</h1>
-                <p class="">What even is this? Do I need to care?</p>
+                <p class="mb-4">What even is this? Do I need to care?</p>
                 </a>
             </div>
             <div class="bg-grid2 col-3 w ms-3 p-3 border border-black rounded">
                 <a class="text-decoration-none text-black" href="#">
                 <h1 class="fs-3 fw-bolder">News</h1>
-                <p class="">Infrequent updates on this site.</p>
+                <p class="mb-4">Infrequent updates on this site.</p>
+                </a>
+            </div>
+        </div>
+        <div class="row my-4">
+            <div class="bg-grid2 col-12 me-3 p-3 border border-black rounded">
+                <a class="text-decoration-none text-black" href="#">
+                <h1 class="fs-3 fw-bolder">GridBugs!</h1>
+                <p class="mb-4">If you have found a bug in a browser, or want to see what we have found so far, check out this site.</p>
                 </a>
             </div>
         </div>
