--- a/Grid by Example.html
+++ b/Grid by Example.html
@@ -28,6 +28,7 @@
             <a class="nav-link fw-bold py-2 px-4" href="#">Resources</a>
         </div>
     </div>
+    <!--end of header-->
     <!--Main-->
     <div class="main container-fuid">
         <div class="row my-4">
@@ -99,12 +100,27 @@
                 </a>
             </div>
         </div>
-        <div class="row my-4">
+        <div class="row my-4 mb-5 pb-5">
             <div class="bg-grid2 col-12 me-3 p-3 border border-secondary rounded">
                 <a class="text-decoration-none text-black" href="#">
                 <h1 class="fs-3 fw-bolder">GridBugs!</h1>
                 <p class="mb-4">If you have found a bug in a browser, or want to see what we have found so far, check out this site.</p>
                 </a>
+            </div>
+        </div>
+    </div>
+    <!--end of main-->
+    <!--footer-->
+    <div class="footer container-fuid bg-grid">
+        <div class="row">
+            <div class="bg-footer col-12 p-3 my-4 rounded">
+                <p>This is a project by Rachel Andrew. Take a look at some of the other things I make.</p>
+                <ul>
+                    <li><a class="text-black" href="#">Perch CMS</a> - the original Really Little CMS. Designed for speed and simple implementation.</li>
+                    <li><a class="text-black" href="#">Notist</a> - slide sharing and much more. Create your public speaking portfolio.</li> 
+                    <li><a class="text-black" href="#">The CSS Workshop</a> - learn CSS Layout with me</li> 
+                </ul>
+                <p>This site is hosted on <a class="text-black" href="#">Netlify</a>, thanks to their free hosting for open source projects.</p>
             </div>
         </div>
     </div>
